feat: added location related data
